--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie App</title>
 </head>
-<body>
-<div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
+
+<body class="aurora-bg aurora--rose">
+    <div class="aurora-layer"> </div>
+    <div class="aurora-glow"> </div>
+    <div class="stars stars--near"> </div>
+    <div class="stars stars--far"> </div>
+    <div class="grain"> </div>
+    <div id="root"></div>
 </body>
+
+<script type="module" src="/src/main.tsx"></script>
 </html>
