--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="%BASE_URL%favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie App</title>
 </head>
 
-<body class="aurora-bg aurora--rose">
-    <div class="aurora-layer"> </div>
-    <div class="aurora-glow"> </div>
-    <div class="stars stars--near"> </div>
-    <div class="stars stars--far"> </div>
-    <div class="grain"> </div>
+<body>
     <div id="root"></div>
 </body>
 
